// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Limit Orders buildDirectLimitOrder p2p: P2P_Order_Data_Snapshot 1`] = `
Object {
  "data": Object {
    "expiry": 1671494400,
    "maker": "0xaC39b311DCEb2A4b2f5d8461c1cdaF756F4F7Ae9",
    "makerAmount": "1000000000000000000",
    "makerAsset": "0x6B175474E89094C44Da98b954EedeAC495271d0F",
    "nonceAndMeta": "2693234308085732315020447542820174961101890254772",
    "taker": "0xD7c0Cd9e7d2701c710D64Fc492C7086679BdF7b4",
    "takerAmount": "8000000000000000000",
    "takerAsset": "0x2b591e99afe9f32eaa6214f7b7629768c40eeb39",
  },
  "domain": Object {
    "chainId": 3,
    "name": "AUGUSTUS RFQ",
    "verifyingContract": "0x34268C38fcbC798814b058656bC0156C7511c0E4",
    "version": "1",
  },
  "types": Object {
    "Order": Array [
      Object {
        "name": "nonceAndMeta",
        "type": "uint256",
      },
      Object {
        "name": "expiry",
        "type": "uint128",
      },
      Object {
        "name": "makerAsset",
        "type": "address",
      },
      Object {
        "name": "takerAsset",
        "type": "address",
      },
      Object {
        "name": "maker",
        "type": "address",
      },
      Object {
        "name": "taker",
        "type": "address",
      },
      Object {
        "name": "makerAmount",
        "type": "uint256",
      },
      Object {
        "name": "takerAmount",
        "type": "uint256",
      },
    ],
  },
}
`;

exports[`Limit Orders buildDirectLimitOrder: Order_Data_Snapshot 1`] = `
Object {
  "data": Object {
    "expiry": 1671494400,
    "maker": "0xaC39b311DCEb2A4b2f5d8461c1cdaF756F4F7Ae9",
    "makerAmount": "1000000000000000000",
    "makerAsset": "0x6B175474E89094C44Da98b954EedeAC495271d0F",
    "nonceAndMeta": "1461501637330902918203684832716283019655932542976",
    "taker": "0x0000000000000000000000000000000000000000",
    "takerAmount": "8000000000000000000",
    "takerAsset": "0x2b591e99afe9f32eaa6214f7b7629768c40eeb39",
  },
  "domain": Object {
    "chainId": 3,
    "name": "AUGUSTUS RFQ",
    "verifyingContract": "0x34268C38fcbC798814b058656bC0156C7511c0E4",
    "version": "1",
  },
  "types": Object {
    "Order": Array [
      Object {
        "name": "nonceAndMeta",
        "type": "uint256",
      },
      Object {
        "name": "expiry",
        "type": "uint128",
      },
      Object {
        "name": "makerAsset",
        "type": "address",
      },
      Object {
        "name": "takerAsset",
        "type": "address",
      },
      Object {
        "name": "maker",
        "type": "address",
      },
      Object {
        "name": "taker",
        "type": "address",
      },
      Object {
        "name": "makerAmount",
        "type": "uint256",
      },
      Object {
        "name": "takerAmount",
        "type": "uint256",
      },
    ],
  },
}
`;
